tests/fixtures/invalid/pow_str_bytes_float.py
# Cannot call pow() with Str, Bytes, Float
x = pow("hello", b"hello", 1.0)
